# HawkPro

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  installer.sh
.github/workflows/: c-cpp.yml
docs/: hawkpro.1
include/: config.hpp  types.hpp
include/process/: process.hpp  process_reader.hpp  process_search.hpp
include/system/: cpu.hpp  disk.hpp  memory.hpp  network.hpp  os.hpp  tasks.hpp  uptime.hpp
include/ui/: header.hpp  input.hpp  layout.hpp  screen.hpp  table.hpp
src/: main.cpp
src/process/: process.cpp  process_reader.cpp  process_search.cpp
src/system/: cpu.cpp  disk.cpp  memory.cpp  network.cpp  os.cpp  tasks.cpp  uptime.cpp
src/ui/: header.cpp  input.cpp  layout.cpp  screen.cpp  table.cpp
